<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/neighbour_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0">


    <ImageView
        android:id="@+id/neighbour_image"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/caroline"></ImageView>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        app:srcCompat="@drawable/ic_arrow_back"></ImageButton>

    <TextView
        android:id="@+id/neighbor_name_bis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="210dp"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        tools:text="Caroline"></TextView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="260dp"
        android:layout_marginRight="16dp"
        app:backgroundTint="#F5F5F5"
        app:srcCompat="@drawable/ic_star_white_24dp" />

    <LinearLayout
        android:id="@+id/visit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/neighbour_image"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/neighbor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="14dp"
            android:fontFamily="sans-serif-light"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Caroline"></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="#F5F5F5"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_place"></ImageView>

            <TextView
                android:id="@+id/neighbor_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textSize="16sp"
                tools:text="Saint pierre du mont à 5km"></TextView>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_phone"></ImageView>

        <TextView
            android:id="@+id/neighbor_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            tools:text="+33 6 86 57 90 14"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_net"></ImageView>

        <TextView
            android:id="@+id/neighbor_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            tools:text="www.facebook.fr/caroline"></TextView>

    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/visit_card"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="14dp"
            android:fontFamily="sans-serif-light"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="A propos de moi"></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="#F5F5F5"></View>

        <TextView
            android:id="@+id/neighbor_about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="14sp"
            tools:text="Boujour ! Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m'accompagner. J'aime les jeux de cartes tels la belote et le tarot."></TextView>

    </LinearLayout>


</RelativeLayout>

